# waltzinganalytics

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/source/: advanced.rst  api.rst  changelog.rst  conf.py  index.rst  installation.rst  qualifiers.rst  quickstart.rst
docs/source/_static/: custom.css
examples/: convert_corners.ipynb  quickstart.py
examples_gallery/: README.txt  plot_01_corner_deliveries.py  plot_02_delivery_zones.py  plot_03_second_phase.py  plot_04_expected_threat.py  plot_05_retention.py  plot_06_team_comparison.py  plot_07_xt_added_bars.py  plot_08_corner_sonar.py  plot_09_match_timeline.py  plot_10_dashboard.py  plot_11_set_piece_value.py  plot_12_set_piece_report_radar.py  plot_13_outcome_shot_map.py  plot_14_light_dark.py  plot_15_shot_value.py  plot_16_rating_benchmark.py  plot_17_full_workflow.py
src/opta_setpieces/: __init__.py  chains.py  cli.py  constants.py  filters.py  metrics.py  phases.py  retention.py  viz.py  xt.py  zones.py
src/wa_setpieces/: __init__.py  cli.py  loader.py  metrics.py  outcomes.py  phases.py  report.py  retention.py  shot_value.py  theme.py  value.py  viz.py  xt.py  zones.py
src/wa_setpieces/convert/: __init__.py  corners.py
src/wa_setpieces/core/: __init__.py  chains.py  loader.py  metrics.py  outcomes.py  phases.py  rating.py  report.py  retention.py  value.py  workflow.py  xt.py
tests/: test_chains.py  test_convert_corners.py  test_filters.py  test_loader.py  test_metrics.py  test_outcomes.py  test_phases.py  test_providers_statsbomb.py  test_rating.py  test_report.py  test_retention.py  test_shot_value.py  test_theme.py  test_value.py  test_viz.py  test_workflow.py  test_xt.py  test_zones.py
tests/data/: sample_match.json
(+11 files in other folders)
