[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wa-setpieces"
version = "0.6.0"
description = "Set-piece metrics, added-value scoring and mplsoccer pitch visualizations (penalties, kick-offs, free kicks, corners, throw-ins, goal kicks) from Opta F24 event data, including second phases, xT, zones and retention"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Waltzing Analytics" }]
keywords = ["football", "soccer", "opta", "set-pieces", "sports-analytics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
viz = [
    "matplotlib>=3.6",
    "mplsoccer>=1.2",
]
docs = [
    "sphinx>=7.0",
    "pydata-sphinx-theme>=0.15",
    "sphinx-gallery>=0.15",
    "myst-parser",
    "matplotlib>=3.6",
    "mplsoccer>=1.2",
]

[project.scripts]
wa-setpieces = "wa_setpieces.cli:main"

[project.urls]
Homepage = "https://github.com/marclamberts/waltzinganalytics"
Documentation = "https://waltzinganalytics.readthedocs.io"
Repository = "https://github.com/marclamberts/waltzinganalytics"
Changelog = "https://waltzinganalytics.readthedocs.io/en/latest/changelog.html"
"Bug Tracker" = "https://github.com/marclamberts/waltzinganalytics/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
